Add: attribute isAvaiableForRent in cart response